--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="error-message">
                 O nome precisa ser completo
             </p>
-            <input type="number" id="numero-conta" required placeholder="Número da conta" />
+            <input type="number" id="numero-conta" required placeholder="campo A" />
             <input type="number" id="valor-deposito" required placeholder="Valor" />
             <textarea id="descricao" placeholder="Descrição (opcional)"></textarea>
             <button id="btn-depositar" type="submit">Depositar</button>
